Changed create_hopffunc and demo

--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "d0d84ae2",
    "metadata": {},
    "outputs": [
@@ -304,12 +304,12 @@
    "id": "672d1510",
    "metadata": {},
    "source": [
-    "First we'll find the parameter $a$ value for the Hopf bifurcation using the large matrix stability finding method (```stab_func_matrix```). The code for this is given below:"
+    "Note that while the initial guess of $a$ for a Hopf bifurcation can be found using both ```stab_func_matrix``` and ```stab_func_DDE``` the true Hopf bifurcation can be found only when using the stability function ```stab_func_matrix``` for this project. The code for finding the initial guesses of $a$ for the two different stability methods is given below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "85cc51f2",
    "metadata": {},
    "outputs": [
@@ -328,12 +328,44 @@
     "stab_indx=findfirst(isequal(1.0),stab)#finds where stability changes first time\n",
     "unstab2_indx=findfirst(isequal(0.0),stab[stab_indx+1:end]) #finds where stability changes again\n",
     "hopf_indx=stab_indx+unstab2_indx #index of the initial guess where hopf bifurcation is\n",
-    "plist[hopf_indx] #parameter guess for hopf bifurcation"
+    "a_hopf_est=plist[hopf_indx] #parameter guess for hopf bifurcation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
+   "id": "fb2711eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.5999999999999672"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Hopf parameter guess from stab_func_DDE\n",
+    "stab_DDEindx=findfirst(isequal(1.0),stab_DDE)#finds where stability changes first time\n",
+    "unstab2_DDEindx=findfirst(isequal(0.0),stab_DDE[stab_DDEindx+1:end]) #finds where stability changes again\n",
+    "hopf_DDEindx=stab_DDEindx+unstab2_DDEindx #index of the initial guess where hopf bifurcation is\n",
+    "a_hopf_DDEest=plist[hopf_DDEindx] #parameter guess for hopf bifurcation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e88be90",
+   "metadata": {},
+   "source": [
+    "Now we have an initial guess (taking the one obtained from ```stab_func_matrix```) for the Hopf parameters, we find the true parameter values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "d2d0e31f",
    "metadata": {},
    "outputs": [
@@ -363,72 +395,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5ca6cd38",
-   "metadata": {},
-   "source": [
-    "Next we'll find the parameter $a$ value for the Hopf bifurcation using the barycentric interpolation stability finding method (```stab_func_bi```). The code for this is given below:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a9c1b7c1",
+   "execution_count": 9,
+   "id": "575404f1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `stab_bi` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `stab_bi` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X30sZmlsZQ==.jl:2"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated a value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: 3.5999999999999672\n",
+      "The estimated a value for Hopf bifurcation using  stab_func_DDE is: 3.5999999999999672\n",
+      "True a value for Hopf bifurcation given by stab_func_matrix: 3.590806415288951\n"
      ]
     }
    ],
    "source": [
-    "#Hopf parameter guess from stab_func_bi \n",
-    "stab_biindx=findfirst(isequal(1.0),stab_bi)#finds where stability changes first time\n",
-    "unstab2_biindx=findfirst(isequal(0.0),stab_bi[stab_biindx+1:end]) #finds where stability changes again\n",
-    "hopf_biindx=stab_biindx+unstab2_biindx #index of the initial guess where hopf bifurcation is\n",
-    "plist[hopf_biindx] #parameter guess for hopf bifurcation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "f0adaab9",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `hopf_biindx` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `hopf_biindx` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X31sZmlsZQ==.jl:1"
-     ]
-    }
-   ],
-   "source": [
-    "yh02,fhopf2=create_hopffunc(invpend_1delay,inpend1tau,[a,b,tau],xlist[hopf_biindx],[plist[hopf_biindx]],[1],nd,stabtype=\"bi\",N_num=20) #outputs initial guess of the Hopf bifurcation (including x, ω and a estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
-    "println(\"The initial guess for Hopf info: $yh02\")\n",
-    "yh2,conv2,=newton(fhopf2,yh02) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
-    "println(\"The true information for the Hopf bifurcation: $yh2\")\n",
-    "println(\"converged?: $conv2\")\n",
-    "a_2hopf=yh2[end]\n",
-    "om_2hopf=yh2[end-1]\n",
-    "x_2hopf=yh2[1]\n",
-    "println(\"The a value for hopf bifurcation: $a_2hopf\")\n",
-    "println(\"The ω value for hopf bifurcation: $om_2hopf\") #1.8910.. which is about 0.6π"
+    "println(\"The estimated a value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: $a_hopf_est\")\n",
+    "println(\"The estimated a value for Hopf bifurcation using  stab_func_DDE is: $a_hopf_DDEest\")\n",
+    "println(\"True a value for Hopf bifurcation given by stab_func_matrix: $a_hopf\")"
    ]
   },
   {
@@ -449,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "82d4c7ef",
    "metadata": {},
    "outputs": [
@@ -483,21 +468,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "db6b861b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `stab_func_bi` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching create_foldfunc(::typeof(invpend_1delay), ::typeof(inpend1tau), ::Vector{Float64}, ::Vector{Float64}, ::Vector{Float64}, ::Vector{Int64}, ::Int64; stabtype::String, N_num::Int64)\nThis error has been manually thrown, explicitly, so the method may exist but be intentionally marked as unimplemented.\n\nClosest candidates are:\n  create_foldfunc(::Any, ::Any, ::Any, ::Any, ::Vector, ::Vector, ::Any; m) got unsupported keyword arguments \"stabtype\", \"N_num\"\n   @ Main c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\shared\\create_foldfunc.jl:2\n",
      "output_type": "error",
      "traceback": [
-      "UndefVarError: `stab_func_bi` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
+      "MethodError: no method matching create_foldfunc(::typeof(invpend_1delay), ::typeof(inpend1tau), ::Vector{Float64}, ::Vector{Float64}, ::Vector{Float64}, ::Vector{Int64}, ::Int64; stabtype::String, N_num::Int64)\n",
+      "This error has been manually thrown, explicitly, so the method may exist but be intentionally marked as unimplemented.\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  create_foldfunc(::Any, ::Any, ::Any, ::Any, ::Vector, ::Vector, ::Any; m) got unsupported keyword arguments \"stabtype\", \"N_num\"\n",
+      "   @ Main c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\shared\\create_foldfunc.jl:2\n",
+      "\n",
       "\n",
       "Stacktrace:\n",
-      " [1] create_foldfunc(f_DDE::typeof(invpend_1delay), f_tau::Function, pars::Vector{Float64}, x0::Vector{Float64}, p0::Vector{Float64}, par_indx::Vector{Int64}, nd::Int64; m::Int64, stabtype::String, N_num::Int64)\n",
-      "   @ Main c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\shared\\create_foldfunc.jl:26\n",
+      " [1] kwerr(::@NamedTuple{stabtype::String, N_num::Int64}, ::Function, ::Function, ::Function, ::Vector{Float64}, ::Vector{Float64}, ::Vector{Float64}, ::Vector{Int64}, ::Int64)\n",
+      "   @ Base .\\error.jl:165\n",
       " [2] top-level scope\n",
       "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X36sZmlsZQ==.jl:1"
      ]
@@ -516,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "f7b79d77",
    "metadata": {},
    "outputs": [
@@ -569,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "b7a8a5dc",
    "metadata": {},
    "outputs": [
