Changed create_foldfunc and demo

--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "af26b77b",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "fb745fe6",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "8a3ff49e",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "89f9557e",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "d0d84ae2",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "85cc51f2",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "fb2711eb",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "d2d0e31f",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "575404f1",
    "metadata": {},
    "outputs": [
@@ -429,12 +429,12 @@
    "id": "2a584072",
    "metadata": {},
    "source": [
-    "The code below finds the parameter value of $a$ such that an eigenvalue $\\lambda=0$ exists, using the large matrix stability method (```stab_func_matrix```) to get the eigenvalues and eigenvectors."
+    "The code below finds the parameter value of $a$ such that an eigenvalue $\\lambda=0$ exists. Note that in this project the corresponding $a$ value can only be found using the large matrix stability method (```stab_func_matrix```), which is used to get the eigenvalues and eigenvectors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "82d4c7ef",
    "metadata": {},
    "outputs": [
@@ -459,54 +459,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "60e6baed",
-   "metadata": {},
-   "source": [
-    "The code below finds the parameter value of $a$ such that an eigenvalue $\\lambda=0$ exists, using the barycentric interpolation stability method (```stab_func_bi```) to get the eigenvalues and eigenvectors."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "db6b861b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching create_foldfunc(::typeof(invpend_1delay), ::typeof(inpend1tau), ::Vector{Float64}, ::Vector{Float64}, ::Vector{Float64}, ::Vector{Int64}, ::Int64; stabtype::String, N_num::Int64)\nThis error has been manually thrown, explicitly, so the method may exist but be intentionally marked as unimplemented.\n\nClosest candidates are:\n  create_foldfunc(::Any, ::Any, ::Any, ::Any, ::Vector, ::Vector, ::Any; m) got unsupported keyword arguments \"stabtype\", \"N_num\"\n   @ Main c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\shared\\create_foldfunc.jl:2\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching create_foldfunc(::typeof(invpend_1delay), ::typeof(inpend1tau), ::Vector{Float64}, ::Vector{Float64}, ::Vector{Float64}, ::Vector{Int64}, ::Int64; stabtype::String, N_num::Int64)\n",
-      "This error has been manually thrown, explicitly, so the method may exist but be intentionally marked as unimplemented.\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  create_foldfunc(::Any, ::Any, ::Any, ::Any, ::Vector, ::Vector, ::Any; m) got unsupported keyword arguments \"stabtype\", \"N_num\"\n",
-      "   @ Main c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\shared\\create_foldfunc.jl:2\n",
-      "\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] kwerr(::@NamedTuple{stabtype::String, N_num::Int64}, ::Function, ::Function, ::Function, ::Vector{Float64}, ::Vector{Float64}, ::Vector{Float64}, ::Vector{Int64}, ::Int64)\n",
-      "   @ Base .\\error.jl:165\n",
-      " [2] top-level scope\n",
-      "   @ c:\\Users\\evasi\\OneDrive\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X36sZmlsZQ==.jl:1"
-     ]
-    }
-   ],
-   "source": [
-    "y0f2,ffold2=create_foldfunc(invpend_1delay,inpend1tau,[a,b,tau],[0.0,0],[1.4],[1],1,stabtype=\"bi\",N_num=20) #returns initial guess for the fold parameters and a function that contains the formula for finding a fold\n",
-    "yff2,convf2,=newton(ffold2,y0f2) #finds value of a for fold for fixed b=1.5\n",
-    "\n",
-    "a_2fold=yff2[end]\n",
-    "x_2fold=yff2[1]\n",
-    "\n",
-    "println(\"The information for the fold bifurcation: $yff2\")\n",
-    "println(\"The value of 'a' that a fold occurs at is: $a_2fold\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "f7b79d77",
    "metadata": {},
    "outputs": [
@@ -559,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "b7a8a5dc",
    "metadata": {},
    "outputs": [
