Added more details

--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -285,6 +285,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb460bc8",
+   "metadata": {},
+   "source": [
+    "Notice that the Breda et al method (given in ```stab_func_DDE```) is much quicker at finding stability than approximating it using a large matrix (method used in ```stab_func_matrix```)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "972ec6c0",
    "metadata": {},
    "source": [
