Corrected the reference

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -504,8 +504,7 @@
    "id": "13d9164a",
    "metadata": {},
    "source": [
-    "1. D. Breada, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis\n",
-    "and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
+    "1. D. Breda, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
    ]
   }
  ],
