--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -587,8 +587,7 @@
    "id": "628565e5",
    "metadata": {},
    "source": [
-    "1. D. Breada, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis\n",
-    "and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
+    "1. D. Breda, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
    ]
   }
  ],
