--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -571,8 +571,7 @@
    "id": "ca96add7",
    "metadata": {},
    "source": [
-    "1. D. Breada, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis\n",
-    "and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
+    "1. D. Breda, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
    ]
   }
  ],
