--- a/Stability_finding_for_DDEs.ipynb
+++ b/Stability_finding_for_DDEs.ipynb
@@ -562,8 +562,7 @@
    "id": "9d7f4cc4",
    "metadata": {},
    "source": [
-    "1. D. Breada, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis\n",
-    "and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
+    "1. D. Breda, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
    ]
   }
  ],
