Added further detail

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "fab8d0a2",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
     "include(\"../shared/stab_func_matrix.jl\") #uses large matrix method to approximate the stability and find the eigenvalues (and eigenvectors and ω if interested in Hopf bifurcation)\n",
     "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
     "include(\"../shared/stab_func_DDE.jl\") #uses method explored in (Breda et al 2009) to find stability and eigenvalues (and if asked, also eigenvectors) of equilibria\n",
-    "include(\"../shared/j_eval.jl\") #uses barycentric interpolation to find the l_j(xi) values needed for use in stab_func_DDE\n",
+    "include(\"../shared/j_eval.jl\") #uses barycentric interpolation to find the l_j(xi) (Lagrange polynomial) values needed for use in stab_func_DDE\n",
     "include(\"../shared/j_diff.jl\") #finds the differentiation matrix of all interpolation points x_j"
    ]
   },
