An explanation was updated

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -226,7 +226,7 @@
    "id": "b9947f22",
    "metadata": {},
    "source": [
-    "The function ```stab_func_DDE``` uses the method described in (Breda et al 2009) to find the stability and the eigenvalues (and eigenvectors if asked) of an equilibrium point. For more information on this function, see the \"Stability_finding_for_DDEs.ipynb\" notebook located in DDE_stability_breda_et_al folder. To use ```stab_func_DDE```, the partial derivative matrices $A_0, A_1$ need to be found for $x=1$ (equilibrium point). These can be found manually (if  possible) or by using ```f_deriv```. In this example we'll use ```f_deriv``` to so we can loop over all the equilibrium points."
+    "The function ```stab_func_DDE``` uses the method described in (Breda et al 2009) to find the stability and the eigenvalues (and if asked the eigenvectors) of an equilibrium point. For more information on this function, see the \"Stability_finding_for_DDEs.ipynb\" notebook located in DDE_stability_breda_et_al folder. To use ```stab_func_DDE```, the partial derivative matrices $A_0, A_1$ need to be found for $x=1$ (equilibrium point). These can be found manually (if  possible) or by using ```f_deriv```. In this example we'll use ```f_deriv``` to so we can loop over all the equilibrium points."
    ]
   },
   {
