Adjusted comments/explanations further

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "fab8d0a2",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "be5d4b96",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "b6ab8081",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "3cc0add2",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "eb2591f3",
    "metadata": {},
    "outputs": [
@@ -226,12 +226,12 @@
    "id": "b9947f22",
    "metadata": {},
    "source": [
-    "The function ```stab_func_DDE``` uses the method described in (Breda et al 2009) to find the stability and the eigenvalues (and if asked the eigenvectors) of an equilibrium point. For more information on this function, see the \"Stability_finding_for_DDEs.ipynb\" notebook located in DDE_stability_breda_et_al folder. To use ```stab_func_DDE```, the partial derivative matrices $A_0, A_1$ need to be found for $x=1$ (equilibrium point). These can be found manually (if  possible) or by using ```f_deriv```. In this example we'll use ```f_deriv``` to so we can loop over all the equilibrium points."
+    "The function ```stab_func_DDE``` uses the method described in (Breda et al 2009) to find the stability and the eigenvalues (and if asked the eigenvectors) of an equilibrium point. For more information on this function, see the \"Stability_finding_for_DDEs.ipynb\" notebook located in the \"DDE_stability_breda_et_al\" folder. To use ```stab_func_DDE```, the partial derivative matrices $A_0, A_1$ need to be found for $x=1$ (equilibrium point). These can be found manually (if  possible) or by using ```f_deriv```. In this example we'll use ```f_deriv``` so we can loop over all the equilibrium points."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "955dd959",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
    "id": "909035d2",
    "metadata": {},
    "source": [
-    "The eigenvalues of the linearised system determine the equilibrium's stability. A Hopf bifurcation occurs when a stability behaviour changes and a pair of complex conjugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. $\\lambda=\\pm \\omega i$. We start finding the Hopf parameters by finding the initial guess of the τ value for the Hopf bifurcation."
+    "The eigenvalues of the linearised system determine the equilibrium's stability. A Hopf bifurcation occurs when the stability behaviour changes and a pair of complex conjugate eigenvalues of the linearised system crosses the imaginary axis and become purely imaginary, i.e. $\\lambda=\\pm \\omega i$. We start finding the Hopf parameters by finding the initial guess of the τ value for the Hopf bifurcation."
    ]
   },
   {
@@ -291,12 +291,12 @@
    "id": "eeaec415",
    "metadata": {},
    "source": [
-    "Note that while the initial guess of $\\tau$ for a Hopf bifurcation can be found using both ```stab_func_matrix``` and ```stab_func_DDE``` the true Hopf bifurcation can only be found when using the stability function ```stab_func_matrix``` as ```create_hopffunc``` has been made to, currently, only work for ```stab_func_matrix```. The code for finding the initial guesses of $\\tau$ for the two different stability methods is given below:"
+    "Note that while the initial guess of $\\tau$ for a Hopf bifurcation can be found using both ```stab_func_matrix``` and ```stab_func_DDE```, the true Hopf bifurcation can only be found when using the stability function ```stab_func_matrix``` as ```create_hopffunc``` has been made to, currently, only work for ```stab_func_matrix```. The code for finding the initial guesses of $\\tau$ for the two different stability methods is given below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "eca4eb12",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "id": "fadae4dd",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "id": "514a1fb6",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
     }
    ],
    "source": [
-    "yh01,fhopf=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau],xlist1[hopf_indx],[plist1[hopf_indx]],[4],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and τ estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
+    "yh01,fhopf=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau],xlist1[hopf_indx],[plist1[hopf_indx]],[4],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and τ estimates) and a function that contains the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
     "yh1,conv1,=newton(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh1\")\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "id": "8e811512",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "id": "0d2e7b31",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "id": "9cf1f034",
    "metadata": {},
    "outputs": [
