Added another reference

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -20,7 +20,7 @@
     "  \\dot{x}&= \\frac{\\beta x(t-\\tau)}{1+[x(t-\\tau)]^n}- \\gamma x(t)\\\\\n",
     "\\end{align}\n",
     "```\n",
-    "where $\\beta$ expresses the dependence of blood cell production on the number of mature cells already in the system; where $\\gamma$ is the death rate of mature cells and where $\\tau$ is the delay between the production of blood cells in the bone marrow and the time taken to release these into the system (blood stream)."
+    "where $\\beta$ expresses the dependence of blood cell production on the number of mature cells already in the system; where $\\gamma$ is the death rate of mature cells and where $\\tau$ is the delay between the production of blood cells in the bone marrow and the time taken to release these into the system (blood stream) (Manjunath, Raina 2014)."
    ]
   },
   {
@@ -499,7 +499,9 @@
    "id": "13d9164a",
    "metadata": {},
    "source": [
-    "1. D. Breda, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009"
+    "1. D. Breda, S. Maset, R. Vermiglio. *TACE-DDE: a Tool for Robust Analysis and Characteristic Equations for Delay Differential Equations*, volume 388, pages 145-155, 2009\n",
+    "2. S. Manjunath and G. Raina. *Stability and hopf bifurcation analysis of the mackey-glass and lasota equations*. The 26th Chinese Control and Decision Conference\n",
+    "(2014 CCDC), pages 2076–2082, 2014."
    ]
   }
  ],
