Backgorund information updated

--- a/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
+++ b/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
@@ -28,11 +28,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ddadd4f",
+   "id": "895f3d64",
    "metadata": {},
    "source": [
-    "The barycentric formula is:\n",
+    "Given $N+1$ distinct nodes, $x_j$ for $j=1,...,N+1$, with numbers $f_j$ corresponding the value of $x_j$ for a given or unknown function $f$, a polynomial $p$ (of degree at most $N$) can be found such that $p$ interpolates $f$ at the points $x_j$ (i.e. $p(x_j)=f_j$) (Berrut , Trefethen 2004). This interpolation polynomial $p$ can be used to evaluate desired points for the function desired $f$.\n",
+    "\n",
+    "The common way the solution can be written is in the *Lagrange form* (Berrut, Trefethen 2004): \n",
+    "\n",
     "```math\n",
+    "p(x)= \\sum_{j=1}^{N+1} f_j \\ell_j(x), \\qquad \\ell_j(x)=\\frac{\\prod_{k=1, k \\neq j}^{N+1} (x-x_k)}{\\prod_{k=1, k \\neq j}^{N+1}(x_j-x_k)},\n",
+    "```\n",
+    "where $\\ell_j$ is the *Lagrange polynomial* corresponding to node $x_j$.\n",
+    "\n",
+    "However, as discussed in (Berrut, Trefethen 2004), in this form each evaluation of $p(x)$ requires $O(N^2)$ additions and multiplications, and adding a new node and it's correspodnding $f$ value means starting from scratch all while the computation is numerically unstable. To combat this, Berrut and Trefethen rewrote $p(x)$ into a more useful form, known as the *barycentric formula* for $p$:\n",
+    "\n",
+    "```math\n",
+    "p(x)=\\frac{\\sum_{j=1}^{N+1}\\frac{w_j}{x-x_j}f_j}{\\sum_{j=1}^{N+1} \\frac{w_j}{x-x_j}}\\tag{1},\n",
+    "```\n",
+    "where $w_j$ are the *barycentric weights*, defined as:\n",
+    "\n",
+    "```math\n",
+    "w_j=\\frac{1}{\\prod_{k\\neq j}(x_j-x_k)}, \\quad j=1,...,N+1\n",
+    "```\n",
+    "\n",
+    "This new form means the number of operations required to evaluate or add a new node decreases compared to the Lagrange form, making computation less expensive.\n",
+    "\n",
+    "Equation (1) can be rearranged to give the barycentric representation of $\\ell_j$ (Berrut, Trefethen 2004):\n",
+    "```math\n",
+    "\\ell_j(x)=\\frac{\\frac{w_j}{(x-x_j)}}{\\sum_{k=1}^{N+1} \\frac{w_k}{x-x_k}}\\tag{2}\n",
     "```"
    ]
   },
@@ -49,7 +72,7 @@
    "id": "06dc5652",
    "metadata": {},
    "source": [
-    "For interpolation points/nodes, $x_j$, and some new points $x_i$, that you want to find $f(x_i)$. The  ```j_eval``` function is used to find the matrix \n",
+    "For given interpolation points/nodes, $x_j$, and some new points ,$x_i$, the user wishes to find $f(x_i)$. The  ```j_eval``` function uses Equation (2) to find ..... the is used to find the matrix \n",
     "```math\n",
     "E_{ij}=\\ell_j(x_i)\n",
     "```\n",
@@ -740,6 +763,22 @@
     "end \n",
     "\n",
     "eigvals(stabmatrixAtrial2) #rightmost eigenvalue matches the one in Breda source!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06746bca",
+   "metadata": {},
+   "source": [
+    "# References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f494b6a",
+   "metadata": {},
+   "source": [
+    "1. J-P. Berrut, L.N. Trefethen, *Barycentric Lagrange Interpolation*, SIAM Review, Vol 46, No.3, pp. 501-517, 2004"
    ]
   }
  ],
