Evaluating section done

--- a/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
+++ b/Barycentric_interpolation/Stability_barycentric_interpolation.ipynb
@@ -64,7 +64,7 @@
    "id": "196561cd",
    "metadata": {},
    "source": [
-    "# Basis - ```j_eval``` function"
+    "# Evaluating $f(x)$"
    ]
   },
   {
@@ -72,19 +72,23 @@
    "id": "06dc5652",
    "metadata": {},
    "source": [
-    "For given interpolation points/nodes, $x_j$, and some new points ,$x_i$, the user wishes to find $f(x_i)$. The  ```j_eval``` function uses Equation (2) to find ..... the is used to find the matrix \n",
+    "For given interpolation points/nodes, $x_j$, and some desired points ,$x_i$, the function ```j_eval``` uses Equation (2) to return the matrix \n",
     "```math\n",
     "E_{ij}=\\ell_j(x_i)\n",
     "```\n",
-    "such that \n",
+    "Let $\\textbf{f}$ be the vector of the nodes corresponding numbers $f_j$ $(\\textbf{f}=(f_1,f_2,...,f_{N+1}))$. Then\n",
     "```math\n",
-    "\\textbf{f}(\\textbf{x}_i)=\\frac{E *\\textbf{f}}{E *\\mathbf{1}}\n",
+    "f(x_i)=E^* \\textbf{f}\n",
     "```\n",
-    "The formula the function ```j_eval``` uses for $\\ell_j(x)$ is:\n",
-    "```math\n",
-    "\\ell_j(x)=\\frac{\\frac{w_j}{x-x_j}}{\\sum_{k=0}^{n} \\frac{w_k}{x-x_k}}\n",
-    "```\n",
-    "While the user can give any interpolation point $x_j$, for large N the user must ensure the points are clustered more heavily at the interval boundaries to ensure an appropriate/well-defined interpolation. For ease, all my examples use a common set of interpolation points, $x_j$, called the Chebyshev points of the second kind, whose formula are:\n",
+    "returns the values of $f$ evaluated at the desired points $x_i$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c6748f8",
+   "metadata": {},
+   "source": [
+    "For ease, all the following examples in this notebook use a common set of interpolation points, $x_j$, called the Chebyshev points of the second kind, whose formula are:\n",
     "\n",
     "```math\n",
     "x_j=\\cos \\frac{j \\pi}{n}, j=0,...,n\n",
@@ -99,7 +103,23 @@
     "1, & \\text{otherwise}\n",
     "\\end{cases}\n",
     "```\n",
-    "However, while my examples use Chebyshev points of the 2nd kind, the function ```j_eval``` can take any $x_j$ values and find their weights. The  ```j_eval``` function finds the matrix $E$ and does so for any points given by the user by finding the weights given the interpolation points $x_j$."
+    "While the given examples use Chebyshev points of the 2nd kind, the function ```j_eval``` can take any $x_j$ values the user provides and find their weights. Note that while the user can give any interpolation point $x_j$ into ```j_eval```, for large $N$ the user must ensure the points are clustered more heavily at the interval boundaries to ensure the interpolation is well-defined - Chebyshev points are an example of nodes that fit this criteria."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b362f5d3",
+   "metadata": {},
+   "source": [
+    "# Differentiating $f(x)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "def226ed",
+   "metadata": {},
+   "source": [
+    "# Example 1"
    ]
   },
   {
@@ -107,7 +127,7 @@
    "id": "f70506c2",
    "metadata": {},
    "source": [
-    "We'll try with using a function $f(x)=\\cos(x)$, where we want the value of $\\cos(0.5)$ and $\\cos(0.75)$ (our $x_i$ are 0.5 and 0.75)"
+    "For the first example, we'll look at the function $f(x)=\\cos(x)$, where we want the value of $\\cos(0.5)$ and $\\cos(0.75)$ - our $x_i$ are 0.5 and 0.75."
    ]
   },
   {
